--- a/index.css
+++ b/index.css
@@ -1,7 +1,32 @@
+/* MOBILE */
 #youtube-player {
   flex-basis: 550px !important;
+  margin-bottom: 48px;
+}
+#theatre-mode {
+  position: absolute;
+  top: 100%;
+  bottom: -40px;
+  right: 0;
+  left: 0;
+  display: flex;
 }
 
+#theatre-mode button {
+  flex: 1;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin: 4px 0;
+  height: 100%;
+  color: #afafaf;
+  background-color: transparent;
+  font-family: "proxima-nova";
+  line-height: 1.3em;
+  letter-spacing: 0px;
+  font-weight: 700;
+  font-style: normal;
+  text-align: center;
+}
 iframe[title="YouTube chat"] {
   flex: 1;
   height: 550px;
@@ -14,35 +39,61 @@ iframe[title="YouTube chat"] {
 }
 
 .react-container > div > div {
-  height: fit-content;
   width: 100%;
   flex-wrap: wrap;
   align-items: center;
   display: flex;
-  background-color: black;
+  background-color: transparent;
 }
 
 /* 1000 x 550 */
 .react-container > div {
-  height: fit-content;
   position: relative;
+  background-color: transparent;
   display: flex;
-  background-color: black;
-  height: fit-content;
 }
+
+/* LARGE SCREEN */
 @media screen and (min-width: 1000px) {
   .react-container {
     height: 550px;
+  }
+  .react-container > div > div {
+    background-color: black;
   }
   .react-container > div {
     position: absolute;
     top: 0;
     bottom: 0;
     right: -100px;
+    background-color: black;
     left: -100px;
   }
   iframe[title="YouTube chat"] {
     flex: unset !important;
+  }
+  #youtube-player {
+    margin-bottom: 0px;
+  }
+  #theatre-mode {
+    top: calc(100% + 14px);
+    bottom: -54px;
+  }
+  #theatre-mode button {
+    max-width: 400px;
+    margin: auto;
+  }
+}
+
+/* FULLSCREEN */
+@media all and (display-mode: fullscreen) {
+  .react-container > div {
+    right: 0;
+    left: 0;
+  }
+  iframe[title="YouTube chat"] {
+    height: 100%;
+    flex: 2;
   }
 }
 
