--- a/index.css
+++ b/index.css
@@ -1,25 +1,69 @@
-/* MOBILE */
-#youtube-player {
-  flex: 1;
-  margin-bottom: 56px;
+#react-container {
+  width: 100%;
+}
+#react-container iframe[title="YouTube chat"] {
+  height: 550px;
+}
+@media screen and (orientation: landscape) and (min-width: 1000px) {
+  #react-container iframe[title="YouTube chat"] {
+    height: 100%;
+  }
+}
+#react-container #theatre-mode button {
+  background: transparent;
+  color: white;
+  border: 1px solid white;
+}
+#react-container > div {
+  height: 100%;
+  width: 100%;
   display: flex;
   position: relative;
 }
-
-#theatre-mode {
+@media screen and (orientation: landscape) and (min-width: 1000px) {
+  #react-container > div {
+    height: 550px;
+  }
+}
+#react-container > div > div {
+  flex: 1;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (orientation: landscape) and (min-width: 1000px) {
+  #react-container > div > div {
+    position: absolute;
+    flex: unset;
+    flex-direction: row;
+    background-color: black;
+    align-items: center;
+    right: -90px;
+    left: -90px;
+  }
+}
+#react-container > div > div #youtube-player {
+  margin-bottom: 46px;
+}
+@media screen and (orientation: landscape) {
+  #react-container > div > div #youtube-player {
+    margin-bottom: unset;
+  }
+}
+#react-container #theatre-mode {
   position: absolute;
   top: 100%;
-  bottom: -40px;
+  bottom: -30px;
   right: 0;
   left: 0;
   display: flex;
 }
-
-#theatre-mode button {
+#react-container #theatre-mode button {
   flex: 1;
   border: 1px solid #ddd;
-  border-radius: 4px;
-  margin: 8px;
+  border-radius: 6px;
+  margin: 8px 4px;
   height: 100%;
   color: #afafaf;
   background-color: transparent;
@@ -30,112 +74,38 @@
   font-style: normal;
   text-align: center;
 }
-
-iframe[title="YouTube chat"] {
-  flex: 1;
-  min-height: 550px;
-}
-
-.react-container {
-  width: 100%;
-  position: relative;
-  height: unset;
-  flex-direction: column;
-  display: flex;
-}
 @media screen and (min-width: 1000px) {
-  .react-container {
-    height: 550px;
-  }
-}
-.react-container:fullscreen #youtube-player {
-  height: fit-content;
-  flex: unset;
-}
-.react-container:fullscreen iframe[title="YouTube chat"] {
-  min-height: unset;
-  height: auto;
-}
-
-.react-container > div > div {
-  width: 100%;
-  flex-direction: column;
-  display: flex;
-  background-color: transparent;
-  flex: 1;
-}
-
-/* 1000 x 550 */
-.react-container > div {
-  position: relative;
-  background-color: transparent;
-  display: flex;
-  flex: 1;
-}
-
-/* LARGE SCREEN */
-@media screen and (min-width: 1000px) {
-  .react-container > div > div {
-    background-color: black;
-    align-items: center;
-    flex-direction: row;
-  }
-
-  .react-container > div {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: -100px;
-    background-color: black;
-    left: -100px;
-  }
-
-  iframe[title="YouTube chat"] {
-    flex: unset !important;
-  }
-
-  #youtube-player {
-    flex: 3;
-    margin-bottom: 0px;
-  }
-
-  #theatre-mode {
-    top: calc(100% + 14px);
-    bottom: -54px;
-  }
-
-  #theatre-mode button {
+  #react-container #theatre-mode button {
     border: 1px solid rgba(255, 255, 255, 0.2);
     color: rgba(255, 255, 255, 0.3);
     max-width: 400px;
-    margin: auto;
+    margin: 15px auto;
   }
 }
-/* FULLSCREEN */
-@media screen and (display-mode: fullscreen) and (orientation: portrait) {
-  .react-container > div {
-    right: 0;
-    left: 0;
-  }
-
-  iframe[title="YouTube chat"] {
-    height: 100%;
+#react-container #youtube-player {
+  flex: 2;
+}
+#react-container #youtube-player iframe {
+  width: 1px;
+}
+#react-container:fullscreen #youtube-player {
+  flex: unset;
+}
+@media screen and (min-width: 1000px) {
+  #react-container:fullscreen #youtube-player {
     flex: 2;
   }
 }
-@media all and (display-mode: fullscreen) and (orientation: landscape) {
-  .react-container > div > div {
-    flex-direction: row;
+#react-container:fullscreen iframe[title="YouTube chat"] {
+  height: 100%;
+}
+@media screen and (orientation: landscape) and (min-width: 1000px) {
+  #react-container:fullscreen > div {
+    height: 100vh;
   }
-
-  .react-container > div {
+  #react-container:fullscreen > div > div {
     right: 0;
     left: 0;
-  }
-
-  iframe[title="YouTube chat"] {
-    height: 100%;
-    flex: 2;
   }
 }
 .title {
@@ -150,7 +120,6 @@ iframe[title="YouTube chat"] {
   font-size: 27px;
   margin: 0 0 28px;
   margin-top: 0;
-  margin-bottom: 0;
   text-align: center;
   white-space: pre-wrap;
   margin-bottom: 16px;
